--- a/src/render/src/locales/zh-CN.json
+++ b/src/render/src/locales/zh-CN.json
@@ -1,3 +1,9 @@
 {
-  "message": "hello i18n !!"
+  "top": {
+    "nav": {
+      "home": "主页",
+      "card": "九宫幻卡",
+      "setting": "设置"
+    }
+  }
 }
